@@ -1,12 +1,14 @@
-; J2XML for System - plg_system_j2xml 3.6.35
-; Copyright (C) 2010, 2018 Helios Ciancio. All rights reserved.
+; System - J2XML - plg_system_j2xml 3.7.43
+; Copyright (C) 2010 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SYSTEM_J2XML="J2XML Export/Send buttons"
+PLG_SYSTEM_J2XML="System - J2XML"
+PLG_SYSTEM_J2XML_DEBUG="Debug"
+PLG_SYSTEM_J2XML_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
+PLG_SYSTEM_J2XML_DEBUG_FILENAME_LABEL="Filename"
+PLG_SYSTEM_J2XML_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages in Google Chrome console and notification popups."
+PLG_SYSTEM_J2XML_DEBUG_PHPCONSOLE_LABEL="PHP Console"
+PLG_SYSTEM_J2XML_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
+PLG_SYSTEM_J2XML_DEBUG_SYSTEM_LABEL="Debug"
 PLG_SYSTEM_J2XML_XML_DESCRIPTION="Export/Send button for Joomla! content."
-
-PLG_SYSTEM_J2XML_FIELD_DEBUG_SYSTEM_LABEL="Debug"
-PLG_SYSTEM_J2XML_FIELD_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
-PLG_SYSTEM_J2XML_FIELD_DEBUG_FILENAME_LABEL="Filename"
-PLG_SYSTEM_J2XML_FIELD_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
