@@ -1,9 +1,9 @@
-; J2XML
-; Copyright (C) 2010 - 2013 Helios Ciancio. All rights reserved.
+; System - J2XML - plg_system_j2xml 3.7.43
+; Copyright (C) 2010 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SYSTEM_J2XML="J2XML pulsanti Esporta e Invia"
+PLG_SYSTEM_J2XML="System - J2XML"
 PLG_SYSTEM_J2XML_BUTTON_EXPORT="Esporta"
 PLG_SYSTEM_J2XML_BUTTON_SEND="Invia"
 PLG_SYSTEM_J2XML_XML_DESCRIPTION="Visualizza i pulsanti Esporta e Invia."
