@@ -1,3 +1,8 @@
+---------------------- 3.7.43  Release [7-February-2019] ----------------------
+
+7-February-2019
+  + J2XML Pro
+
 ----------------------- 3.7.42  Release [22-March-2018] -----------------------
 
 22-March-2018
